force-app/main/default/objects/Product2/fields/Inventory_Available__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Available__c</fullName>
    <label>Inventory Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>