force-app/main/default/objects/Product2/fields/Product_Exempt__c.field-meta.xml
<CustomField>
    <fullName>Product_Exempt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Product Exempt</label>
    <type>Checkbox</type>
</CustomField>